Changelog
=========

5.2-dev - (unreleased)
----------------------

5.1 - (2012-11-22)
------------------
* Bug fix: map infoTemplate template is constructed only the information that 
  is available for that object
  [ichimdav #7337]
* Feature: rdf export of geotags now includes geonames URI with owl:sameAs.
  [demarant refs #7409]
* Bug fix: fix issue with map view crashing when urllib got a Description
  that couldn't quote because of unicode characters
  [ichimdav #10006]
* Feature: Now we export all tags as geo:Point including locations labels.
  [demarant refs #3425]
* Bug fix: corrected export of points according to wgs84 rdf vocabulary.
  [demarant refs #3425]
* Bug fix: use folder_listing and atct_topic_view macros to avoid errors when
  using the map on non Topic content types
  [ichimdav #3353]
* Feature: added rdf adapter for geotag field
  [tiberich, demarant, #3425]

5.0 - (2012-07-30)
------------------
* Bug fix: Fixed deletion of geotags when the user creates a new translation
  [voineali fixes #5390]

4.9 - (2012-07-17)
------------------
* Bug fix: fix preview of geotags widget on edit form when using
  eea.forms
  [ichimdav #5339]

4.8 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n:domain in .pt files
  [prospchr refs #5162]

4.7 - (2012-06-13)
------------------
* Ugrade step: Within ZMI > portal_types > Topic add map_view
  to Available view methods
  [ichimdav #3355]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.geotags
* Feature: Added 'geotags' zCatalog metadata to store the objects
  geographic information on brain in order for this to be used in map views
  [voineali refs #3355]
* Bug fix: display scalebar on map
  [ichimdav #4788]
* Feature: display tags left aligned for the map macros that use the
  version with events variable defined
  [ichimdav #4788]